--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "samples",
+    "samples"
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.2.0",
