--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,6 @@
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.2.0",
-    "jquery": "jquery/jquery#~2.1.0"
+    "superagent": "~0.18.0"
   }
 }
