Do not reverse version

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "web-resume",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "homepage": "https://github.com/pveyes/web-resume",
   "authors": [
     "Fatih Kalifa <fatih@pvey.es>"
@@ -14,7 +14,9 @@
   "ignore": [
     "**/.*",
     "samples",
-    "node_modules"
+    "node_modules",
+    "demo.html",
+    "demo.js"
   ],
   "dependencies": {
     "polymer": "Polymer/polymer#~0.2.0",
